{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 63,
  "lineage": "84e2e3da-bc54-d05f-eb28-d807935af5af",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:loadbalancer/app/pi-infra-development-user-alb/d25cc88e1a3de43c",
            "arn_suffix": "app/pi-infra-development-user-alb/d25cc88e1a3de43c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-pi-infra-development-user-alb-1230210696.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:loadbalancer/app/pi-infra-development-user-alb/d25cc88e1a3de43c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pi-infra-development-user-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ab865321af0aa6ce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f9e9d649171944d6"
              },
              {
                "subnet_id": "subnet-0fa71f72e6e7bfc25"
              }
            ],
            "subnets": [
              "subnet-0f9e9d649171944d6",
              "subnet-0fa71f72e6e7bfc25"
            ],
            "tags": {
              "Name": "pi-infra-development-user-alb"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-alb",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "vpc_id": "vpc-031eb93780473fa5c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:loadbalancer/app/pi-infra-development-user-alb/d25cc88e1a3de43c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK - ALB default",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:loadbalancer/app/pi-infra-development-user-alb/d25cc88e1a3de43c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.internal",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "svc1",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc1-t/be9e65c1ad5ecd4d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/6835d9fa9f5f353f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/svc1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/6835d9fa9f5f353f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00",
            "priority": 10,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/6835d9fa9f5f353f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.internal",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.ms",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        },
        {
          "index_key": "svc2",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc2-t/6bbd47c0f6da60e0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/61082bd66d2f93fa",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/svc2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/61082bd66d2f93fa",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00",
            "priority": 11,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/61082bd66d2f93fa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.internal",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.ms",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        },
        {
          "index_key": "svc3",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc3-t/4f7fe1af49013738",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/281a800c288bb119",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/svc3/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/281a800c288bb119",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00",
            "priority": 12,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:listener-rule/app/pi-infra-development-user-alb/d25cc88e1a3de43c/cb791609881fde00/281a800c288bb119"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.internal",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.ms",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "svc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc1-t/be9e65c1ad5ecd4d",
            "arn_suffix": "targetgroup/pi-infra-development-user-svc1-t/be9e65c1ad5ecd4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc1-t/be9e65c1ad5ecd4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pi-infra-development-user-svc1-t",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pi-infra-development-user-svc1-tg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-svc1-tg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc1-t/be9e65c1ad5ecd4d"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "svc2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc2-t/6bbd47c0f6da60e0",
            "arn_suffix": "targetgroup/pi-infra-development-user-svc2-t/6bbd47c0f6da60e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc2-t/6bbd47c0f6da60e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pi-infra-development-user-svc2-t",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pi-infra-development-user-svc2-tg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-svc2-tg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc2-t/6bbd47c0f6da60e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "svc3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc3-t/4f7fe1af49013738",
            "arn_suffix": "targetgroup/pi-infra-development-user-svc3-t/4f7fe1af49013738",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc3-t/4f7fe1af49013738",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pi-infra-development-user-svc3-t",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pi-infra-development-user-svc3-tg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-svc3-tg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:512411987939:targetgroup/pi-infra-development-user-svc3-t/4f7fe1af49013738"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025ef5dea026c69b2",
            "arn": "arn:aws:ec2:us-east-1:512411987939:elastic-ip/eipalloc-025ef5dea026c69b2",
            "domain": "vpc",
            "id": "eipalloc-025ef5dea026c69b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-205-93-0.compute-1.amazonaws.com",
            "public_ip": "18.205.93.0",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-nat-bastion-eip"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-nat-bastion-eip",
              "Project": "pi-infra",
              "Team": "MACC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c526ffa455aee359",
            "arn": "arn:aws:ec2:us-east-1:512411987939:instance/i-0d1b77e8aa599e57f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1b77e8aa599e57f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b8861b5eb1843022"
              }
            ],
            "primary_network_interface_id": "eni-0b8861b5eb1843022",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-3-94-76-35.compute-1.amazonaws.com",
            "public_ip": "3.94.76.35",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "development",
                  "ManagedBy": "terraform",
                  "Project": "pi-infra",
                  "Team": "MACC"
                },
                "tags_all": {
                  "Environment": "development",
                  "ManagedBy": "terraform",
                  "Project": "pi-infra",
                  "Team": "MACC"
                },
                "throughput": 125,
                "volume_id": "vol-029091a9ba6affdf7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bf10205822fc29a4",
            "tags": {
              "Name": "pi-infra-development-user-nat-bastion"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-nat-bastion",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c85a9ad0d602038"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "i-0d1b77e8aa599e57f",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.debian_12",
            "data.aws_availability_zones.available",
            "module.network.aws_subnet.public_az1",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.nat_bastion",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_via_nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09d0ed3b588f028c91080289494",
            "instance_id": "i-0d1b77e8aa599e57f",
            "instance_owner_id": "512411987939",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0b8861b5eb1843022",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09d0ed3b588f028c9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-09d0ed3b588f028c9"
          },
          "dependencies": [
            "data.aws_ami.debian_12",
            "data.aws_availability_zones.available",
            "module.nat_bastion.aws_instance.nat_bastion",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public_az1",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:internet-gateway/igw-027736c620dec15fc",
            "id": "igw-027736c620dec15fc",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-igw"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-igw",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027736c620dec15fc",
            "id": "r-rtb-02c3dae6c6023fc891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02c3dae6c6023fc89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02c3dae6c6023fc89"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:route-table/rtb-09d0ed3b588f028c9",
            "id": "rtb-09d0ed3b588f028c9",
            "owner_id": "512411987939",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "pi-infra-development-user-rt-private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-rt-private",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "rtb-09d0ed3b588f028c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:route-table/rtb-02c3dae6c6023fc89",
            "id": "rtb-02c3dae6c6023fc89",
            "owner_id": "512411987939",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "pi-infra-development-user-rt-public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-rt-public",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "rtb-02c3dae6c6023fc89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b38cb9291bd7357a",
            "region": "us-east-1",
            "route_table_id": "rtb-09d0ed3b588f028c9",
            "subnet_id": "subnet-0fa71f72e6e7bfc25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_az1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077dafd813fcce48f",
            "region": "us-east-1",
            "route_table_id": "rtb-09d0ed3b588f028c9",
            "subnet_id": "subnet-0f9e9d649171944d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_az2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e4f1473c80c82b",
            "region": "us-east-1",
            "route_table_id": "rtb-02c3dae6c6023fc89",
            "subnet_id": "subnet-0bf10205822fc29a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_az1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:subnet/subnet-0fa71f72e6e7bfc25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa71f72e6e7bfc25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512411987939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-private-az1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-private-az1",
              "Project": "pi-infra",
              "Team": "MACC",
              "Tier": "private"
            },
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "subnet-0fa71f72e6e7bfc25",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:subnet/subnet-0f9e9d649171944d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9e9d649171944d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512411987939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-private-az2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-private-az2",
              "Project": "pi-infra",
              "Team": "MACC",
              "Tier": "private"
            },
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "subnet-0f9e9d649171944d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:subnet/subnet-0bf10205822fc29a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf10205822fc29a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512411987939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-public-az1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-public-az1",
              "Project": "pi-infra",
              "Team": "MACC",
              "Tier": "public"
            },
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "subnet-0bf10205822fc29a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:vpc/vpc-031eb93780473fa5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d042908cb925c80c",
            "default_route_table_id": "rtb-00c09e47ab26fb190",
            "default_security_group_id": "sg-0ef5722cab3889aa0",
            "dhcp_options_id": "dopt-0070c6c47f80ee899",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031eb93780473fa5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c09e47ab26fb190",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "tags": {
              "Name": "pi-infra-development-user-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-vpc",
              "Project": "pi-infra",
              "Team": "MACC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "vpc-031eb93780473fa5c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group/sg-0ab865321af0aa6ce",
            "description": "Security group for internal ALB",
            "egress": [],
            "id": "sg-0ab865321af0aa6ce",
            "ingress": [],
            "name": "pi-infra-development-user-alb-20260106125850709200000003",
            "name_prefix": "pi-infra-development-user-alb-",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pi-infra-development-user-alb-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-alb-sg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sg-0ab865321af0aa6ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "microservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group/sg-0912bcd7ea6faff7c",
            "description": "Security group for microservices instances",
            "egress": [],
            "id": "sg-0912bcd7ea6faff7c",
            "ingress": [],
            "name": "pi-infra-development-user-ms-20260106125850709200000005",
            "name_prefix": "pi-infra-development-user-ms-",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pi-infra-development-user-microservices-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-microservices-sg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sg-0912bcd7ea6faff7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group/sg-09c85a9ad0d602038",
            "description": "Security group for NAT + Bastion instance in public subnet",
            "egress": [],
            "id": "sg-09c85a9ad0d602038",
            "ingress": [],
            "name": "pi-infra-development-user-nat-bastion-20260106125850709200000006",
            "name_prefix": "pi-infra-development-user-nat-bastion-",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pi-infra-development-user-nat-bastion-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-nat-bastion-sg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sg-09c85a9ad0d602038",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group/sg-0d8ec550c71fa6640",
            "description": "Security group for Aurora cluster",
            "egress": [],
            "id": "sg-0d8ec550c71fa6640",
            "ingress": [],
            "name": "pi-infra-development-user-rds-20260106125850708300000002",
            "name_prefix": "pi-infra-development-user-rds-",
            "owner_id": "512411987939",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pi-infra-development-user-rds-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "pi-infra-development-user-rds-sg",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "timeouts": null,
            "vpc_id": "vpc-031eb93780473fa5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sg-0d8ec550c71fa6640",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0b8ce520f8fd02e48",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-0b8ce520f8fd02e48",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ab865321af0aa6ce",
            "security_group_rule_id": "sgr-0b8ce520f8fd02e48",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0b8ce520f8fd02e48",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ms_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0e29a61722ebeba29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-0e29a61722ebeba29",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0912bcd7ea6faff7c",
            "security_group_rule_id": "sgr-0e29a61722ebeba29",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0e29a61722ebeba29",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.microservices"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "nat_bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0e5857509ea432959",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0e5857509ea432959",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09c85a9ad0d602038",
            "security_group_rule_id": "sgr-0e5857509ea432959",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0e5857509ea432959",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-07a89d934c4aba805",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-07a89d934c4aba805",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d8ec550c71fa6640",
            "security_group_rule_id": "sgr-07a89d934c4aba805",
            "tags": null,
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-07a89d934c4aba805",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0e25cd2d7ef64675a",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "HTTP from VPC (API GW VPC Link)",
            "from_port": 80,
            "id": "sgr-0e25cd2d7ef64675a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ab865321af0aa6ce",
            "security_group_rule_id": "sgr-0e25cd2d7ef64675a",
            "tags": {
              "Name": "HTTP-VPC"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "HTTP-VPC",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0e25cd2d7ef64675a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ms_from_alb_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "svc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-09428ea5422f39155",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "App port svc1 from ALB",
            "from_port": 8081,
            "id": "sgr-09428ea5422f39155",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ab865321af0aa6ce",
            "region": "us-east-1",
            "security_group_id": "sg-0912bcd7ea6faff7c",
            "security_group_rule_id": "sgr-09428ea5422f39155",
            "tags": {
              "Name": "APP-svc1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "APP-svc1",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-09428ea5422f39155",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.microservices"
          ]
        },
        {
          "index_key": "svc2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-055a4b65aa137e6a7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "App port svc2 from ALB",
            "from_port": 8082,
            "id": "sgr-055a4b65aa137e6a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ab865321af0aa6ce",
            "region": "us-east-1",
            "security_group_id": "sg-0912bcd7ea6faff7c",
            "security_group_rule_id": "sgr-055a4b65aa137e6a7",
            "tags": {
              "Name": "APP-svc2"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "APP-svc2",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-055a4b65aa137e6a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.microservices"
          ]
        },
        {
          "index_key": "svc3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-09f79dcb3228bdd8d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "App port svc3 from ALB",
            "from_port": 8083,
            "id": "sgr-09f79dcb3228bdd8d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ab865321af0aa6ce",
            "region": "us-east-1",
            "security_group_id": "sg-0912bcd7ea6faff7c",
            "security_group_rule_id": "sgr-09f79dcb3228bdd8d",
            "tags": {
              "Name": "APP-svc3"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "APP-svc3",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 8083
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-09f79dcb3228bdd8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.microservices"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ms_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0ddbeaff4888d7b73",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH from NAT/Bastion",
            "from_port": 22,
            "id": "sgr-0ddbeaff4888d7b73",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09c85a9ad0d602038",
            "region": "us-east-1",
            "security_group_id": "sg-0912bcd7ea6faff7c",
            "security_group_rule_id": "sgr-0ddbeaff4888d7b73",
            "tags": {
              "Name": "SSH-FROM-BASTION"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "SSH-FROM-BASTION",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0ddbeaff4888d7b73",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.microservices",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-05e8c5c6dd95e0b8e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05e8c5c6dd95e0b8e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09c85a9ad0d602038",
            "security_group_rule_id": "sgr-05e8c5c6dd95e0b8e",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "SSH",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-05e8c5c6dd95e0b8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat_from_vpc_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0fcf5e72cdb470a15",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "All traffic from VPC",
            "from_port": null,
            "id": "sgr-0fcf5e72cdb470a15",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09c85a9ad0d602038",
            "security_group_rule_id": "sgr-0fcf5e72cdb470a15",
            "tags": {
              "Name": "VPC-ALL"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "VPC-ALL",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0fcf5e72cdb470a15",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.nat_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_ms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512411987939:security-group-rule/sgr-0e2ddceb2d1dbdbb4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "MySQL from microservices",
            "from_port": 3306,
            "id": "sgr-0e2ddceb2d1dbdbb4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0912bcd7ea6faff7c",
            "region": "us-east-1",
            "security_group_id": "sg-0d8ec550c71fa6640",
            "security_group_rule_id": "sgr-0e2ddceb2d1dbdbb4",
            "tags": {
              "Name": "MYSQL-FROM-MS"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "MYSQL-FROM-MS",
              "Project": "pi-infra",
              "Team": "MACC"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512411987939",
            "id": "sgr-0e2ddceb2d1dbdbb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.microservices",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}